rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__date_part_doy_from_dimension.snap
---
source: cubesql/src/compile/mod.rs
expression: context.execute_query(query).await.unwrap()
---
+--------+
| result |
+--------+
| 275    |
+--------+
