rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__date_part_qtr_from_dimension.snap
---
source: cubesql/src/compile/mod.rs
expression: logical_plan
---
Projection: #datepart(Utf8("qtr"),MultiTypeCube.dim_date0)
  Aggregate: groupBy=[[datepart(Utf8("quarter"), #MultiTypeCube.datepart(Utf8("qtr"),MultiTypeCube.dim_date0)) AS datepart(Utf8("qtr"),MultiTypeCube.dim_date0)]], aggr=[[]]
    CubeScan: request={
  "measures": [],
  "dimensions": [],
  "segments": [],
  "timeDimensions": [
    {
      "dimension": "MultiTypeCube.dim_date0",
      "granularity": "quarter"
    }
  ]
}
