rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__dbeaver_introspection_databases.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"SELECT db.oid,db.* FROM pg_catalog.pg_database db WHERE datname = 'cubedb'\".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+-------+-------+---------+--------+----------+------------+------------+---------------+--------------+--------------+---------------+--------------+------------+---------------+--------+
| _oid  | oid   | datname | datdba | encoding | datcollate | datctype   | datistemplate | datallowconn | datconnlimit | datlastsysoid | datfrozenxid | datminmxid | dattablespace | datacl |
+-------+-------+---------+--------+----------+------------+------------+---------------+--------------+--------------+---------------+--------------+------------+---------------+--------+
| 13757 | 13757 | cubedb  | 10     | 6        | en_US.utf8 | en_US.utf8 | false         | true         | -1           | 13756         | 727          | 1          | 1663          | NULL   |
+-------+-------+---------+--------+----------+------------+------------+---------------+--------------+--------------+---------------+--------------+------------+---------------+--------+
